--- a/src/main/res/layout/toast_view.xml
+++ b/src/main/res/layout/toast_view.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="12dp"
         android:textColor="@color/white"
         android:layout_width="wrap_content"
+        android:gravity="center"
         android:layout_height="wrap_content"
         tools:text="错误提醒"/>
 </LinearLayout>
