--- a/src/main/res/values-v19/styles.xml
+++ b/src/main/res/values-v19/styles.xml
@@ -15,9 +15,11 @@
         <!--<item name="android:windowTranslucentStatus">true</item>-->
     <!--</style>-->
     <style name="AppTheme.TranslucentStatus">
-        <item name="android:windowTranslucentNavigation">false</item>
+        <!--<item name="android:windowTranslucentNavigation">false</item>-->
+        <!--<item name="android:naviga">false</item>-->
         <item name="android:windowTranslucentStatus">true</item>
     </style>
+
     <style name="AppTheme.Translucent" parent="AppTheme.TranslucentStatus">
         <item name="android:windowBackground">@color/theme_translate</item>
         <item name="android:windowIsTranslucent">true</item>
