--- a/src/main/res/values/ykt_ui_config.xml
+++ b/src/main/res/values/ykt_ui_config.xml
@@ -12,7 +12,7 @@
     <color name="footBarBG">#ffffff</color>
 
     <color name="toolbar_deliver_color">#D3D3D3</color>
-    <color name="divide_color">#D9DDE1</color>
+    <color name="divide_color">#F5F5F5</color>
 
     <color name="color_content_bg">#f5f5f5</color>//背景
 
