--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -13,6 +13,8 @@
         <item name="android:windowActionModeOverlay">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:actionModeBackground">@color/colorPrimary</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowTranslucentStatus">false</item>
     </style>
     <!--<style name="AppTheme.TranslucentStatus">-->
     <!--<item name="android:windowTranslucentNavigation">false</item>-->
