--- a/src/main/res/drawable/shape_bt_negative_bg.xml
+++ b/src/main/res/drawable/shape_bt_negative_bg.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <corners android:radius="@dimen/button_radius"> </corners>
-<solid android:color="@color/button_negative_color"></solid>
-<stroke android:color="?colorPrimary" android:width="2dp"></stroke>
+<stroke android:color="@color/colorAccent" android:width="1dp"></stroke>
 </shape>
