--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -34,5 +34,9 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
     </style>
-
+    <!--<style name="AppTheme.TranslucentBack">-->
+        <!--<item name="android:windowBackground">@color/theme_translate</item>-->
+        <!--<item name="android:windowIsTranslucent">true</item>-->
+        <!--<item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>-->
+    <!--</style>-->
 </resources>
