--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -7,19 +7,16 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="titleTextColor">@color/title_text_color</item>
-        <item name="android:windowIsTranslucent">false</item>
         <item name="actionBarSize">@dimen/actionBarSize</item>
 
         <item name="android:windowActionModeOverlay">true</item>
         <item name="android:windowContentOverlay">@null</item>
-
         <item name="android:actionModeBackground">@color/colorPrimary</item>
-
-
+        <item name="android:windowIsTranslucent">false</item>
+        <!--<item name="android:windowTranslucentNavigation">false</item>-->
     </style>
     <style name="AppTheme.TranslucentStatus">
-        <!--<item name="android:windowTranslucentNavigation">false</item>-->
-        <!--<item name="android:naviga">false</item>-->
+        <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowTranslucentStatus">true</item>
     </style>
     <!--<item name="android:windowTranslucentNavigation">false</item>-->
