--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -9,10 +9,10 @@
         <item name="titleTextColor">@color/title_text_color</item>
         <item name="actionBarSize">@dimen/actionBarSize</item>
 
-        <item name="android:windowActionModeOverlay">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:actionModeBackground">@color/colorPrimary</item>
-        <item name="android:windowIsTranslucent">false</item>
+        <!--<item name="android:windowActionModeOverlay">true</item>-->
+        <!--<item name="android:windowContentOverlay">@null</item>-->
+        <!--<item name="android:actionModeBackground">@color/colorPrimary</item>-->
+        <!--<item name="android:windowIsTranslucent">false</item>-->
         <!--<item name="android:windowTranslucentNavigation">false</item>-->
     </style>
     <style name="AppTheme.TranslucentStatus">
