--- a/src/main/res/layout/toolbar.xml
+++ b/src/main/res/layout/toolbar.xml
@@ -43,6 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/title_text_color"
+        android:textStyle="bold"
         android:textSize="@dimen/title_text_size"
         android:maxEms="12"
         tools:text="title"/>
