--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimaryDark">#FFF</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:windowBackground">@color/windowBackground</item>
+
         <item name="titleTextColor">@color/title_text_color</item>
         <item name="actionBarSize">@dimen/actionBarSize</item>
 
@@ -15,6 +17,7 @@
         <!--<item name="android:windowIsTranslucent">false</item>-->
         <!--<item name="android:windowTranslucentNavigation">false</item>-->
     </style>
+
     <style name="AppTheme.TranslucentStatus">
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowTranslucentStatus">true</item>
@@ -32,8 +35,8 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>
     </style>
     <!--<style name="AppTheme.TranslucentBack">-->
-        <!--<item name="android:windowBackground">@color/theme_translate</item>-->
-        <!--<item name="android:windowIsTranslucent">true</item>-->
-        <!--<item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>-->
+    <!--<item name="android:windowBackground">@color/theme_translate</item>-->
+    <!--<item name="android:windowIsTranslucent">true</item>-->
+    <!--<item name="android:windowAnimationStyle">@android:style/Animation.Translucent</item>-->
     <!--</style>-->
 </resources>
