--- a/src/main/res/layout/toolbar.xml
+++ b/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/colorPrimary"
     android:layout_height="@dimen/actionBarSize">
 
     <ImageView
@@ -13,7 +13,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center_vertical"
-        android:padding="9dp"
+        android:padding="4dp"
         android:layout_marginLeft="8dp"/>
 
     <ImageView
@@ -21,7 +21,7 @@
         android:visibility="gone"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:padding="9dp"
+        android:padding="4dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="48dp"/>
 
@@ -42,7 +42,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/title_text_color"
+        android:textColor="@color/text_color_primary"
         android:textStyle="bold"
         android:textSize="@dimen/title_text_size"
         android:maxEms="12"
@@ -65,7 +65,7 @@
         android:visibility="gone"
         android:layout_height="36dp"
         android:layout_gravity="right|center_vertical"
-        android:padding="9dp"
+        android:padding="4dp"
         android:layout_marginRight="48dp"/>
 
     <ImageView
