--- a/src/main/res/layout/toolbar.xml
+++ b/src/main/res/layout/toolbar.xml
@@ -13,7 +13,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_gravity="center_vertical"
-        android:padding="4dp"
+        android:padding="8dp"
         android:layout_marginLeft="8dp"/>
 
     <ImageView
@@ -21,7 +21,7 @@
         android:visibility="gone"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:padding="4dp"
+        android:padding="8dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="48dp"/>
 
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/text_color_primary"
         android:textStyle="bold"
+        android:maxLines="1"
         android:textSize="@dimen/title_text_size"
         android:maxEms="12"
         tools:text="title"/>
