--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+
+    <color name="theme_translate">#5555</color>
+
+    <color name="black">#000</color>
     <color name="white">#FFF</color>
     <color name="gray">#444</color>
     <color name="translate">#00000000</color>
-    <color name="theme_translate">#5555</color>
+
+    <color name="cover">#8888</color>
+    <color name="blue">#3388aa</color>
 </resources>
