--- a/src/main/res/layout/toolbar.xml
+++ b/src/main/res/layout/toolbar.xml
@@ -12,6 +12,7 @@
         android:visibility="gone"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        tools:visibility="visible"
         android:layout_gravity="center_vertical"
         android:padding="8dp"
         android:layout_marginLeft="8dp"/>
@@ -19,6 +20,7 @@
     <ImageView
         android:id="@+id/iv_left2"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:padding="8dp"
@@ -39,6 +41,7 @@
     <TextView
         android:id="@+id/title"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,6 +57,7 @@
         android:layout_gravity="right"
         android:padding="4dp"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_marginRight="15dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -64,6 +68,7 @@
         android:id="@+id/iv_right2"
         android:layout_width="36dp"
         android:visibility="gone"
+        tools:visibility="visible"
         android:layout_height="36dp"
         android:layout_gravity="right|center_vertical"
         android:padding="4dp"
@@ -73,6 +78,8 @@
         android:id="@+id/iv_right"
         android:layout_width="36dp"
         android:layout_height="36dp"
+        android:padding="8dp"
+        tools:visibility="visible"
         android:visibility="gone"
         android:layout_gravity="right|center_vertical"
         android:layout_marginRight="8dp"/>
