--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 
     <color name="theme_translate">#5555</color>
 
-    <color name="black">#000</color>
+    <color name="card_back">#000</color>
     <color name="white">#FFF</color>
     <color name="gray">#444</color>
     <color name="translate">#00000000</color>
