--- a/src/main/res/drawable/shape_bt_square_bg.xml
+++ b/src/main/res/drawable/shape_bt_square_bg.xml
@@ -3,7 +3,7 @@
     <!--<solid android:color="#0A93FF"></solid>-->
     <!--<corners android:radius="5dp"></corners>-->
 
-        <gradient android:type="linear" android:useLevel="true" android:startColor="#ff0085fe" android:endColor="#ff00a3ff" android:angle="225" />
+        <gradient android:type="linear" android:useLevel="true" android:startColor="@color/button_positive_start_color" android:endColor="@color/button_positive_end_color" android:angle="225" />
         <corners android:topLeftRadius="5dp" android:topRightRadius="5dp" android:bottomLeftRadius="5dp" android:bottomRightRadius="5dp" />
 
 </shape>
