--- a/src/main/res/values/styles-widget.xml
+++ b/src/main/res/values/styles-widget.xml
@@ -1,3 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="custom_dialog_style" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <!-- <item name="android:backgroundDimEnabled">false</item> -->
+        <!-- 设置弹框是否显示半透明背景 -->
+    </style>
 </resources>
